--- a/src/styles/components/documentary-box.scss
+++ b/src/styles/components/documentary-box.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   width: 900px;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   &__text {
     width: 300px;
   }
