--- a/src/styles/components/opensource-wall.scss
+++ b/src/styles/components/opensource-wall.scss
@@ -1,6 +1,6 @@
 .c-opensource-wall {
   display: flex;
   justify-content: center;
-  padding-bottom: 310px;
+  padding-bottom: 180px;
   padding-top: 50px;
 }
